# sports_betting

./: .gitignore  README.md  add_event_url_column.py  pyproject.toml  setup.py  streamlit_app.py
frontend/: next.config.js  package-lock.json  package.json  postcss.config.js  schema.sql  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/callback/: route.ts
frontend/app/games/: page.tsx
frontend/app/games/[id]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/players/: page.tsx
frontend/app/players/[id]/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/simulations/: page.tsx
frontend/app/verify-email/: page.tsx
frontend/components/: api-status.tsx  floating-chat.tsx  navbar.tsx  player-stats-chart.tsx  sidebar.tsx  theme-provider.tsx  theme-toggle.tsx  upcoming-games.tsx  user-stats-chart.tsx
frontend/contexts/: game-details-context.tsx  games-context.tsx  supabase-provider.tsx
frontend/lib/: api.ts  services.ts  supabase.ts
frontend/types/: supabase.ts
sports_intel/: __init__.py  cli.py
sports_intel/api/: main.py
sports_intel/api/routers/: games.py  player_props.py  players.py
sports_intel/betting/: __init__.py  kelly.py
sports_intel/core/: settings.py
sports_intel/db/: __init__.py  cli.py  models.py
sports_intel/ingest/: __init__.py  cli.py  dk_odds.py  dk_player_props.py  dk_schedule.py  nba_stats.py  provider_base.py  sportsdb_provider.py
sports_intel/paper_trade/: __init__.py  cli.py  simulator.py
