[tool.poetry]
name = "sports-intel"
version = "0.1.0"
description = "Sports-Intel MVP - A sports betting intelligence tool"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "sports_intel"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
playwright = "^1.34.0"
# streamlit = "^1.33.0"  # Removed due to Python 3.9.7 incompatibility
requests = "^2.31.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pandas = "^2.2.0"
greenlet = "^3.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sports-intel = "sports_intel.cli:app"
